11 April 2008
+ Image folders can be set to control default image default size.
+ Fixed an error call.
+ Updated: templates/edit_folder.tpl, templates/style.css

9 April 2008
+ Popup images can be set to navigate among other images in the
  folder.
+ getThumbnail handles a resized image now.
+ Popup windows all the same size.
+ Update: templates/image_view.tpl, templates/settings.tpl

8 April 2008
+ Added getThumbnail function to File_Assoc
+ Image's getThumbnail can be linkable.
+ Increased default thumbnail size slightly.

Version 2.0.1
----------------------------------------------------------------
2 April 2008
+ Updated youTube import.
+ Removed unused code.

Version 2.0.0
----------------------------------------------------------------
19 March 2008
+ Update nulls the url column for those marked parent
+ Update drops parent_id column.
+ Resized images don't automatically link to parent anymore. Has to be
  requested by module.
+ Udpated: templates/settings.tpl

18 March 2008
+ Fixed bug in video thumbnailing.

7 March 2008
+ Fixed fc_convert table check typo.
+ File classification made deity only

5 March 2008
+ Extra permission checks added.
+ User must have rights to add folders or upload new files.

26 February 2008
+ Small edit to classify template for error messages.

22 February 2008
+ Fixed image popup link address

21 February 2008
+ Fixed multimedia popup outside of mod_rewrite (thanks Verdon)
+ Added Italian translation

20 February 2008
+ Settings tab is now deity only
+ Fixed instances of error messages not appearing on upload
+ Enforcing folder permissions on item views.
+ Moved some functions out of Cabinet to Forms hopefully to save some
  memory.
+ Allowed file types now look at extensions. Mime types are checked by
  the new PHPWS_File methods.
+ Deities can now choose the allowed file types from a new tab.
+ Media, Images, Docs pull their allowed types from the phpws_settings
  now.
+ Changed over mime checking to new phpws_file methods.